# HackRF-Watchdog

./: .gitignore  LICENSE  README.md  main before spectrum.py  main.py  pyproject.toml  requirements-pi.txt
docs/: install-pi-bookworm.md  install-windows.md
hackrf_watchdog/: __init__.py  atak_bridge.py  cli.py  config.py  detect.py  sweep_backend.py
hackrf_watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
packaging/linux/: HackRF-Watchdog.desktop  run_watchdog.sh
